--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-DB_CNN=mongodb+srv://chat_user:JmN8PltTPXc9svaA@cluster0.qi21x.mongodb.net/chat
+DB_CNN=mongodb+srv://chat_user:dFFySeXm9TYpSqT5@chatbackend.mklsanx.mongodb.net/
 JWT_KEY=haJSHdjksh!!1i27@askjdhm2nasa21
