--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-DB_CNN=mongodb+srv://chat_user:dFFySeXm9TYpSqT5@chatbackend.mklsanx.mongodb.net/
+DB_CNN=mongodb+srv://chat_user:F9wcyNiN3KBnSWJJ@cluster0.thp1e1b.mongodb.net/
 JWT_KEY=haJSHdjksh!!1i27@askjdhm2nasa21
